CI: Add eslint, stylelint, and banana and make pass
Set up linting for the JS, CSS, and JSON files, and update the styles and
JavaScript so that the linting is successful.

--- a/resources/ext.minimalexample.syntaxhelp.css
+++ b/resources/ext.minimalexample.syntaxhelp.css
@@ -2,6 +2,6 @@
 	font-size: medium;
 }
 
-#ext-minimalexample-help-link-wrapper:before {
+#ext-minimalexample-help-link-wrapper::before {
 	content: ' ';
 }
